2009-11-24  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	* src/mb/hd-desktop.c (hd_desktop_init): Don't focus the desktop here,
	it's now properly done in libmatchbox2.

2009-11-23  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	NB#147866 closing a standalone notification while it's fading out
		  yields assertion violation

	While free_thumb() was doing the animation it was clicked to close
	again which invoked nothumb_close_clicked() which referred to a
	cleared field of its Thumbnail structure which was invalid by that
	time anyway.

	* src/home/hd-task-navigator.c (free_thumb):
	  Disconnect signal handlers which would refer to the Thumbnail.
	  (= all)

2009-11-19  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	NB#147448 Task Launcher grid view needs threshold for panning

	* src/tidy/tidy-finger-scroll.c (motion_event_cb, captured_event_cb):
	  So implement it.

2009-11-19  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	NB#147344 [REGU] Phone application: L/P is broken to certain extent

	* src/home/hd-title-bar.c (hd_title_bar_update_now):
	  Be aware of the portrait-but-not-portrait-yet state and make
	  the title bar look like in landscape for the time being.
	  The already queued up hd_title_bar_update() will get
	  everything right.

2009-11-19  Gordon Williams <gordon.williams@collabora.co.uk>

	Fixes: NB#141736 - Background is not consistent with and without 
	                   notification (reopened because it turns out this
	                   isn't actually always reproducable)
	                   
	* src/tidy/tidy-util.c: Make sure we save the state of scissoring. We
	  had problems before because if we updated the blur group while
	  a partial update was queued, only a partial bit of the blur would be
	  updated. This may fix other blur-related bugs too. 

2009-11-19  Marc Ordinas i Llopis  <marc.ordinasillopis@collabora.co.uk>

	Keep sending key presses if we just opened Contacts or CallUI, even if no
	longer at home.
	Fixes: NB#146363
